# MatrixMultiplication

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot.ipynb
include/: matrix.h
src/: main.c  matrix.c  matrix_blocked_pthread.c  matrix_pthreads.c
tests/: fill_nthreads_arr.c  fill_test_array.c
